--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -17,6 +17,12 @@
 
 .nav {
   display: flex;
+  flex-grow: 1;
+  flex-basis: 0;
+}
+
+.right {
+  justify-content: flex-end;
 }
 
 .nav__list {
@@ -25,13 +31,17 @@
   padding: 0;
 }
 
-.nav__item {
+.nav__link {
+  text-decoration: none;
   display: flex;
   align-items: center;
-  cursor: pointer;
+  transition: opacity 0.2s ease-in-out;
 }
 
-.link {
-  text-decoration: none;
-  color: unset;
+.nav__link:hover {
+  opacity: .6;
+}
+
+.nav__link_active {
+  color: var(--text-primary-color);
 }
